[project]
name = "teyvat-bio-dashboard"
version = "0.1.0"
description = "BioResearch Eval Dashboard — Streamlit app for catalyst prediction tracking"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "streamlit-authenticator>=0.3,<0.5",
    "supabase>=2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "yfinance>=0.2.40",
]
